# collie

./: COLLIE_Demo_Notebook.ipynb  QUICKSTART.md  README.md  einstein_demo.py  main.py  pyproject.toml
.cursor/rules/: astral-uv.mdc  docs-and-todo.mdc
.github/workflows/: python-package.yml
docs/: HOWTOs.md  cidoc-crm-standard.md  developer-experience.md  mission.md  plan.md  testing.md  todo.md
notebook_output/: batch_canonical_entities.json  canonical_entities.json  network.cypher  workflow_summary.md
notebook_output/markdown/: entities_summary.md  entity_1_E21.md  entity_2_E21.md  entity_3_E21.md  entity_3_E53.md  entity_4_E21.md  entity_4_E53.md  entity_5_E21.md  entity_5_E53.md
src/collie/: __init__.py  main.py  properties.py
src/collie/codegen/: generate_models.py  generate_registry.py
src/collie/codegen/specs/: crm_classes.yaml  crm_properties.yaml
src/collie/docs/: HOWTOs.md
src/collie/examples/: museum_object.json
src/collie/extraction/: __init__.py  extractor.py  extractor_clean.py  llm_models.py
src/collie/io/: to_cypher.py  to_markdown.py
src/collie/io/to_networkx/: converters.py  graph_builder.py
src/collie/models/: base.py
src/collie/tests/: test_networkx_integration.py
src/collie/tests/golden/: test_museum_object.py
src/collie/tests/unit/: test_cypher.py  test_markdown.py  test_validators.py
src/collie/validators/: quantifiers.py  typing_rules.py
src/collie/visualization/: __init__.py  export.py  plotting.py
