[project]
name = "collie"
version = "0.1.0"
description = "Classful Ontology for Life-Events Information Extraction"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "David Spencer", email = "david.spencer@familysearch.org"}
]
maintainers = [
    {name = "David Spencer", email = "david.spencer@familysearch.org"}
]
keywords = ["ontology", "information-extraction", "life-events", "pydantic", "graphql"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-ai>=1.0.2",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/decisionnerd/collie"
Repository = "https://github.com/decisionnerd/collie"
Issues = "https://github.com/decisionnerd/collie/issues"

[project.scripts]
collie = "collie.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collie"]

[tool.hatch.build.sources]
"src" = ""
